--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/CinemaApp
 endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-13.2.1.jre11.jar=../../../Downloads/sqljdbc_13.2/enu/jars/mssql-jdbc-13.2.1.jre11.jar
+file.reference.mssql-jdbc-13.2.1.jre11.jar-1=C:\\Users\\Simonthuandev\\Downloads\\mssql-jdbc-13.2.1.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-13.2.1.jre11.jar}
+    ${file.reference.mssql-jdbc-13.2.1.jre11.jar}:\
+    ${libs.jakartaee-web-api-9.0.classpath}:\
+    ${file.reference.mssql-jdbc-13.2.1.jre11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
