--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,15 +35,21 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CinemaApp
 endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.2.jar=C:\\Users\\Simonthuandev\\Downloads\\commons-logging-1.2.jar
+file.reference.fontbox-2.0.35.jar=C:\\Users\\Simonthuandev\\Downloads\\fontbox-2.0.35.jar
 file.reference.mssql-jdbc-13.2.1.jre11.jar=../../../Downloads/sqljdbc_13.2/enu/jars/mssql-jdbc-13.2.1.jre11.jar
 file.reference.mssql-jdbc-13.2.1.jre11.jar-1=C:\\Users\\Simonthuandev\\Downloads\\mssql-jdbc-13.2.1.jre11.jar
+file.reference.pdfbox-2.0.35.jar=C:\\Users\\Simonthuandev\\Downloads\\pdfbox-2.0.35.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-13.2.1.jre11.jar}:\
     ${libs.jakartaee-web-api-9.0.classpath}:\
-    ${file.reference.mssql-jdbc-13.2.1.jre11.jar-1}
-# Space-separated list of extra javac options
+    ${file.reference.mssql-jdbc-13.2.1.jre11.jar-1}:\
+    \# Space-separated list of extra javac options:\
+    ${file.reference.pdfbox-2.0.35.jar}:\
+    ${file.reference.fontbox-2.0.35.jar}:\
+    ${file.reference.commons-logging-1.2.jar}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
