--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CinemaApp
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-13.2.1.jre11.jar=../../../Downloads/sqljdbc_13.2/enu/jars/mssql-jdbc-13.2.1.jre11.jar
+file.reference.jcalendar-1.4.jar=src\\lib\\jcalendar-1.4.jar
+file.reference.mssql-jdbc-13.2.1.jre11.jar-1=src\\lib\\mssql-jdbc-13.2.1.jre11.jar
+file.reference.poi-4.0.1.jar=src\\lib\\poi-4.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-13.2.1.jre11.jar}
+    ${file.reference.mssql-jdbc-13.2.1.jre11.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.poi-4.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
